# System_Sumulation_Homeworks

./: README.md
HW2_Atomic_Model_Coffee_Machine_Java/Atomic_Model_Coffee_Machine_Java/: pom.xml
HW2_Atomic_Model_Coffee_Machine_Java/Atomic_Model_Coffee_Machine_Java/src/main/java/org/example/: App.java  AtomicModelCoffeeMachine.java  AtomicModelSingleton.java  InsufficientChangeException.java  notes.txt
HW_3/: CMakeLists.txt  MemoryModel.cpp  MemoryModel.h  NetworkModel.cpp  NetworkModel.h  XORModel.cpp  XORModel.h  main.cpp
untitled folder/: AtomicModelCoffeeMachine.cpp  AtomicModelCoffeeMachine.h  CMakeLists.txt  InsufficientFundsException.cpp  InsufficientFundsException.h  main.cpp
